# Bezier

./: .clang-format  .gitignore  .travil.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  bezier.cpp  bezier.h  bezier_8h_source.html  class_bezier_1_1_curve.html  class_bezier_1_1_curve.js  class_bezier_1_1_poly_curve.html  class_bezier_1_1_poly_curve.js  classes.html  declarations_8h_source.html  dir_10b76677362b27e2fafe7c129683d51f.html  dir_10b76677362b27e2fafe7c129683d51f.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  index.html  legendre__gauss_8h_source.html  menudata.js  namespace_bezier.html  namespace_bezier.js  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespaces.js  namespaces_dup.js  navtreedata.js  navtreeindex0.js  (+2 more)
.cache/clangd/index/: bezier.cpp.33BA99A9431CE423.idx  bezier.h.ABBC45927B5F0710.idx  coefficients.h.466D949835A49451.idx  declarations.h.882A0EC6A3E10C2C.idx  polycurve.cpp.6CFD9D5A5654691F.idx  polycurve.h.1D02339D2DBC22A6.idx  utils.cpp.04F0DA20455CA53D.idx  utils.h.6D254B4D1B80CC33.idx
.github/workflows/: build.yml  docs.yml  test.yml
BezierCpp/: bezier.cpp  bezier.h  declarations.h  legendre_gauss.h  polycurve.cpp  polycurve.h  polyline.cpp  polyline.h
example/: bezier_example.pro  customscene.cpp  customscene.h  fw_curve.cpp  fw_curve.h  fw_curve_2.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcurve.cpp  qcurve.h  qgraphicsviewzoom.cpp  qgraphicsviewzoom.h  qpolycurve.cpp  qpolycurve.h
include/Bezier/: bezier.h  coefficients.h  declarations.h  legendre_gauss.h  polycurve.h  sturm.h  utils.h
include/BezierCpp/: bezier.h  legendre_gauss.h  offsetted_point.h  polycurve.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js
src/: bezier.cpp  offsetted_point.cpp  polycurve.cpp  utils.cpp
test/: CMakeLists.txt  unit_tests.cpp  unit_tests.hpp
