<?xml version="1.0"?>
<package format="2">
    <name>bezier</name>
    <version>0.3.2</version>
    <description>C++ library for Bezier curves</description>
    <maintainer email="mirko.kokot@romb-technologies.hr">Mirko Kokot</maintainer>
    <author>Mirko Kokot</author>
    <license>Apache License 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>eigen</depend>

    <export>
      <build_type>cmake</build_type>
    </export>
</package>

